--- a/public/locales/pt-PT/translation.json
+++ b/public/locales/pt-PT/translation.json
@@ -1,5 +1,6 @@
 {
   "youJoinedConversation": "Tu entraste na conversa",
   "youLeftConversation": "Tu saíste da conversa",
-  "typeMessage": "Digita uma mensagem"
+  "typeMessage": "Digita uma mensagem",
+  "senderYou": "Tu"
 }
