Add labels to buttons

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -13,5 +13,9 @@
   "leaveConversation": "Sair",
   "senderYou": "Você",
   "changeParticipantName": "Alterar meu nome",
-  "inviteBots": "Convidar bots"
+  "inviteBots": "Convidar bots",
+  "sendMessage": "Enviar mensagem",
+  "insertAttachment": "Anexar arquivo",
+  "insertMedia": "Inserir mídia",
+  "recordVoice": "Gravar voz"
 }
