Add installation instructions

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,5 @@
 {
-  "welcomeMessage": "Welcome to BLAB. Please type your name:",
+  "welcomeMessage": "Welcome to BLAB. What is your name?",
   "newConversation": "New:",
   "newConversationName": "Conversation name",
   "yourName": "Name",
