--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -1,5 +1,5 @@
 {
-  "welcomeMessage": "Bem-vindo(a) ao BLAB. Digite seu nome:",
+  "welcomeMessage": "Bem-vindo(a) ao BLAB. Qual é o seu nome?",
   "newConversation": "Nova:",
   "newConversationName": "Nome da conversa",
   "yourName": "Nome",
